@@ -1,0 +1,85 @@
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<prefab>
+  <property name="CopyAirBlocks" value="True" />
+  <property name="ExcludeDistantPOIMesh" value="False" />
+  <property name="ExcludePOICulling" value="False" />
+  <property name="DistantPOIYOffset" value="0" />
+  <property name="AllowTopSoilDecorations" value="False" />
+  <property name="DifficultyTier" value="1" />
+  <property name="ShowQuestClearCount" value="1" />
+  <property name="TraderArea" value="False" />
+  <property name="PrefabSize" value="25, 25, 25" />
+  <property name="RotationToFaceNorth" value="2" />
+  <property name="EditorGroups" value="cave" />
+  <property name="Tags" value="cave, underground" />
+  <property name="DuplicateRepeatDistance" value="2000" />
+  <property name="Zoning" value="none" />
+  <property name="SleeperVolumeSize" value="5, 4, 7#5, 4, 7#16, 2, 11#14, 7, 16" />
+  <property name="SleeperVolumeStart" value="10, 1, 18#10, 1, 0#6, 3, 7#11, 5, 5" />
+  <property name="SleeperVolumeGroupId" value="0,0,0,0" />
+  <property name="SleeperVolumeGroup" value="GroupGenericZombie,1,1,GroupGenericZombie,1,1,GroupGenericZombie,2,3,ZomSpiderOnly,5,6" />
+  <property name="SleeperIsLootVolume" value="False,False,False,False" />
+  <property name="SleeperIsQuestExclude" value="False,False,False,False" />
+  <property name="SleeperVolumeFlags" value="0,0,0,0" />
+  <property name="SleeperVolumeTriggeredBy" value=" # # # " />
+  <property name="POIMarkerSize" value="3, 3, 1#3, 3, 1" />
+  <property name="POIMarkerStart" value="11, 3, 25#11, 3, -1" />
+  <property name="POIMarkerGroup" value="cave,cave" />
+  <property name="POIMarkerTags" value="cavenode#cavenode" />
+  <property name="POIMarkerType" value="None,None" />
+  <property name="POIMarkerPartToSpawn" value="," />
+  <property name="POIMarkerPartRotations" value="0,2" />
+  <property name="POIMarkerPartSpawnChance" value="1,1" />
+  <property class="Stats">
+    <property name="TotalVertices" value="185101" />
+    <property name="TotalTriangles" value="92155" />
+    <property class="BlockEntities">
+      <property name="Vertices" value="170143" />
+      <property name="Triangles" value="77161" />
+    </property>
+    <property class="ChunkMeshes0">
+      <property name="Vertices" value="8586" />
+      <property name="Triangles" value="4438" />
+    </property>
+    <property class="ChunkMeshes1">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes2">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes3">
+      <property name="Vertices" value="184" />
+      <property name="Triangles" value="92" />
+    </property>
+    <property class="ChunkMeshes4">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes5">
+      <property name="Vertices" value="6188" />
+      <property name="Triangles" value="10464" />
+    </property>
+  </property>
+  <property class="IndexedBlockOffsets">
+    <property class="challenge_polymers">
+      <property name="0" value="17, 3, 13" />
+    </property>
+    <property class="challenge_sinks">
+      <property name="0" value="6, 9, 9" />
+    </property>
+    <property class="challenge_gore">
+      <property name="0" value="8, 8, 12" />
+    </property>
+    <property class="TraderOnOff">
+      <property name="0" value="17, 3, 14" />
+    </property>
+    <property class="quest_wood">
+      <property name="0" value="10, 3, 18" />
+    </property>
+    <property class="quest_wood_trees">
+      <property name="0" value="12, 3, 16" />
+    </property>
+  </property>
+</prefab>
